--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=42.0.0",
     "Cython",
-    "numpy"
+    "oldest-supported-numpy",
 ]
 
 build-backend = "setuptools.build_meta"
