Make pre-commit hooks happy

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = fcutils
-description = FlashCam files reader libraries wrapped in Python
 version = attr: fcutils._version.version
+description = FlashCam files reader libraries wrapped in Python
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/legend-exp/pyfcutils
@@ -16,12 +16,14 @@ classifiers =
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
     License :: OSI Approved :: Apache Software License
+    License :: OSI Approved :: MIT License
     Operating System :: MacOS
     Operating System :: POSIX
     Operating System :: Unix
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -36,14 +38,11 @@ classifiers =
 packages = find:
 install_requires =
     numpy
-include_package_data = True
 python_requires = >=3.6
+include_package_data = True
 package_dir =
     = src
 zip_safe = False
-
-[options.package_data]
-fcutils = *.pxd
 
 [options.packages.find]
 where = src
@@ -54,3 +53,9 @@ test =
     legend-testdata@git+https://github.com/legend-exp/legend-testdata-py@v0.2.0#egg=legend-testdata
     pre-commit
     pytest>=6.0
+
+[options.package_data]
+fcutils = *.pxd
+
+[flake8]
+extend-ignore = E203, E501
