--- a/setup.cfg
+++ b/setup.cfg
@@ -8,15 +8,14 @@ url = https://github.com/legend-exp/pyfcutils
 author = Simon Sailer
 author_email = simon.sailer@mpi-hd.mpg.de
 maintainer = The LEGEND collaboration
-license = MIT
+license = OSL-3.0
 license_file = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     Intended Audience :: Science/Research
-    License :: OSI Approved :: Apache Software License
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)
     Operating System :: MacOS
     Operating System :: POSIX
     Operating System :: Unix
