--- a/setup.cfg
+++ b/setup.cfg
@@ -48,10 +48,10 @@ where = src
 
 [options.extras_require]
 test =
-    coverage
     legend-testdata@git+https://github.com/legend-exp/legend-testdata-py@v0.2.0#egg=legend-testdata
     pre-commit
     pytest>=6.0
+    pytest-cov
 
 [options.package_data]
 fcutils = *.pxd
