[setup] bump legend-testdata version and tune cbuildwheel settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ where = src
 
 [options.extras_require]
 test =
-    legend-testdata@git+https://github.com/legend-exp/legend-testdata-py@v0.2.0#egg=legend-testdata
+    legend-testdata>=0.4.1
     pre-commit
     pytest>=6.0
     pytest-cov
