--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ profile = "black"
 multi_line_output = 3
 
 [tool.cibuildwheel]
+build = "cp3{8,9,10}-*"
+skip = "*_i686"
 test-extras = "test"
 test-command = "pytest {project}/tests"
 build-verbosity = 1
