--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = fcutils
+name = pyfcutils
 version = attr: fcutils._version.version
 description = FlashCam files reader libraries wrapped in Python
 long_description = file: README.md
