--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,11 @@ multi_line_output = 3
 
 [tool.cibuildwheel]
 build = "cp3{8,9,10}-*"
-skip = "*_i686"
+skip = "*_i686" # no 32-bit archs
 test-extras = "test"
 test-command = "pytest {project}/tests"
 build-verbosity = 1
 
 [tool.cibuildwheel.macos]
 archs = ["auto", "universal2"]
+test-skip = ["*universal2:arm64"]
