--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ where = src
 
 [options.extras_require]
 test =
-    legend-testdata>=0.4.1
+    pylegendtestdata
     pre-commit
     pytest>=6.0
     pytest-cov
