--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
     "setuptools>=42.0.0",
     "setuptools_scm[toml]>=3.4",
     "oldest-supported-numpy",
+    "cython"
 ]
 
 build-backend = "setuptools.build_meta"
