Update test data package name. Support for 3.11.

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,10 +43,10 @@ where = src
 
 [options.extras_require]
 test =
-    legend-testdata>=0.4.1
     pre-commit
     pytest>=6.0
     pytest-cov
+    pylegendtestdata
 
 [options.package_data]
 fcutils = *.pxd
